Las medias de los log y maximos en funcion de si es profesor o alumno, añadido agrupar por horas y por dia de la semana, estos dos no usan el datepicker #53

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -603,7 +603,7 @@ function manageLogsButtons(){
 
 function changeYMaxStackedBar(max){
 	optionsStackedBar.scales.yAxes[0].ticks.suggestedMax=max;
-	myChart.options=optionsStackedBar;
+	myChart.options.scales.yAxes[0].ticks.suggestedMax=max;
 	myChart.update();
 }
 
