Eliminado el fichero googlecharts.js y añadido el enlace en lugar del fichero

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -6,7 +6,7 @@
 
 <script type="text/javascript" src="./lib/Chart.js"></script>
 <script type="text/javascript" src="./lib/color-hash.js"></script>
-<script type="text/javascript" src="./lib/googleCharts.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript" src="./lib/html2canvas.js"></script>
 <script type="text/javascript" src="./messages.js"></script>
 
