--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
 <head>
+<title>Charts</title>
 <link rel="stylesheet" type="text/css" href="../css/chart.css" />
 
 
@@ -43,7 +45,7 @@
 	</div>
 
 	<div id="inicio" class="inicio">
-		<img class="imginicio" src="../img/logo.png">
+		<img alt="Logo" class="imginicio" src="../img/logo.png">
 	</div>
 
 	<div id="noradar" class="card">
