Actualizado el anexo

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -127,7 +127,7 @@ var optionsLineChart = {
                 ticks: 
                 {
                     beginAtZero:true,
-                    suggestedMax: 10,
+                    max: 10,
                     stepSize: 1,
                     fontColor: 'rgba(0, 0, 0, 1)'
                 }//ticks
@@ -143,7 +143,7 @@ var optionsLineChart = {
                 ticks: 
                 {
                     beginAtZero:true,
-                    suggestedMax: 10,
+                    max: 10,
                     stepSize: 1,
                     fontColor: 'rgba(0, 0, 0, 1)'
                 }//ticks
