Mejoras de estabilidad, internacionalización, sesión permanente

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -249,7 +249,7 @@ var optionsStackedBar= {
 			},
 			afterTitle: function(tooltipItem, data) {
 				//Despues del titulo ponemos el nombre y apellidos del usuario
-				return data.datasets[tooltipItem[0].datasetIndex].stack;
+				return data.datasets[tooltipItem[0].datasetIndex].name;
 			}
 		}
 	},
