Exportacion de datos del curso y los usuarios. Cambiado la bandera de catañula, añadido pestañas de secciones y modulos del curso.

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -18,17 +18,17 @@
 
 	<div class="controles">
 		<div class="pestañas">
-			<input type="button" value="Lineas" class="btn" id="btnLineas"
+			<input type="button"  class="btn" id="btnLineas"
 				onclick="generateChart('line')" /> <input type="button"
-				value="Radar" class="btn" id="btnRadar"
+				 class="btn" id="btnRadar"
 				onclick="generateChart('radar')" /> <input type="button"
-				value="BoxPlot General" class="btn" id="btnBoxPlot"
+				 class="btn" id="btnBoxPlot"
 				onclick="generateChart('boxplot')" /> <input type="button"
-				value="BoxPlot Del Grupo" class="btn" id="btnBoxPlotGroup"
+				 class="btn" id="btnBoxPlotGroup"
 				onclick="generateChart('boxplotgroup')" /> <input type="button"
-				value="Barras Apiladas" class="btn" id="btnStackedBar"
+				 class="btn" id="btnStackedBar"
 				onclick="generateChart('stackedBar')" /> <input type="button"
-				value="Calificaciones" class="btn" id="btnCalificaciones"
+				 class="btn" id="btnCalificaciones"
 				onclick="drawTable()" />
 
 		</div>
@@ -39,7 +39,7 @@
 			<input type="button" value="Leyenda" class="btn" id="btnLegend"
 				onclick="hideLegend()" /> <input type="button" value="Media General"
 				class="btn" id="btnMean" onclick="showGeneralMean()" /> <input
-				type="button" value="Media Del Grupo" class="btn" id="btnGroupMean"
+				type="button"  class="btn" id="btnGroupMean"
 				onclick="showGroupMean()" />
 		</div>
 	</div>
