--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -68,6 +68,12 @@
 
 	<script type="text/javascript">
 //------------------------------------------Opciones para los graficos------------------------------------------------------------------
+
+// Opciones Globales
+
+//Chart.defaults.global.defaultFontFamily= "Comic Sans MS";
+//Chart.defaults.global.defaultFontSize=14;
+
 // Opciones para el gráfico de lineas y el boxplot
 var optionsLineChart = {
 	maintainAspectRatio: false,
