--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -301,6 +301,12 @@ heatmapOptions = {
 			    type: "heatmap"
 			  },
 			  dataLabels: {
+			  formatter: function (val, opts) {
+				  if (val == 0) {
+					  return "";
+				  }
+		            return val;
+		       },
 			    style: { colors: ["#000000"] }
 			  },
 			  colors: ["#0ff00"],
