Añadido los eventos Lesson restarted y Lesson resumed, arreglado el error que no mostraba la tabla de calificaciones

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -412,7 +412,7 @@ function drawTable() {
 	document.getElementById('noGroup').style.display = 'none';
 	document.getElementById('chart-container').style.display = 'none';
 	document.getElementById('table_div').style.display = 'block';
-	document.getElementById('apexchartsDiv').syle.display='none';
+	document.getElementById('apexchartsDiv').style.display='none';
 	document.getElementById('btnMean').style.display = 'none';
 	document.getElementById('btnGroupMean').style.display = 'none';
 	document.getElementById('btnLegend').style.display = 'none';
