--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -16,20 +16,20 @@
 
 <div class="controles">
     <div class="pestañas" id="grade_tabs">
-        <input type="button" class="btn" id="btnLineas" onclick="generateChart('line')" />
-        <input type="button" class="btn" id="btnRadar" onclick="generateChart('radar')" />
-        <input type="button" class="btn" id="btnBoxPlot" onclick="generateChart('boxplot')" />
-        <input type="button" class="btn" id="btnBoxPlotGroup" onclick="generateChart('boxplotgroup')" />
-        <input type="button" class="btn" id="btnCalificaciones" onclick="drawTable()" />
+        <input type="button" class="btn" id="btnLineas" onclick='javaConnector.updateCharts("LINE");'/>
+        <input type="button" class="btn" id="btnRadar" onclick='javaConnector.updateCharts("RADAR");' />
+        <input type="button" class="btn" id="btnBoxPlot" onclick='javaConnector.updateCharts("GENERAL_BOXPLOT");' />
+        <input type="button" class="btn" id="btnBoxPlotGroup" onclick='javaConnector.updateCharts("GROUP_BOXPLOT");' />
+        <input type="button" class="btn" id="btnCalificaciones" onclick='javaConnector.updateCharts("TABLE");' />
     </div>
     <div class="pestañas" id="log_tabs">
-        <input type="button" class="btn" id="btnStackedBar" onclick="javaConnector.updateStackedBar()" />
-        <input type="button" class="btn" id="btnHeatmap" onclick="javaConnector.updateHeatmap()" />
+        <input type="button" class="btn" id="btnStackedBar" onclick='javaConnector.updateCharts("STACKED_BAR");' />
+        <input type="button" class="btn" id="btnHeatmap" onclick='javaConnector.updateCharts("HEAT_MAP");' />
     </div>
 
     <div class="opciones">
         <input type="button" value="." class="btn" style="visibility: hidden; width: 0px; margin: 0px; padding: 0px;" />
-        <input type="button" value="Leyenda" class="btn" id="btnLegend" onclick="hideLegend()" />
+        <input type="button" value="Leyenda" class="btn" id="btnLegend" onclick="javaConnector.hideLegend();" />
         <input type="button" value="Media General" class="btn" id="btnMean" onclick="showGeneralMean()" />
         <input type="button" class="btn" id="btnGroupMean" onclick="showGroupMean()" />
     </div>
@@ -399,12 +399,12 @@
         document.getElementById('chart-container').style.display = value;
     }
 
-    function updateChartjs(update, type, dataset, options) {
-
-        if (update) {
+    function updateChartjs(type, dataset, options) {
+        options.legend.display = legendActive;
+        if (myChart.type == type) {
             myChart.data = dataset;
+            myChart.options = options;
         } else {
-            options.legend.display = legendActive;
             myChart.destroy();
             myChart = new Chart(ctx, {
                 type: type,
@@ -412,6 +412,8 @@
                 options: options
             });
         }
+
+
         myChart.update();
 
     }
@@ -428,7 +430,7 @@
     }
 
 
-    function updateStackedChart(dataset, update) {
+    function updateStackedChart(dataset) {
 
         document.getElementById('btnHeatmap').disabled = false;
         document.getElementById('btnStackedBar').disabled = true;
@@ -441,7 +443,7 @@
         displayGroupButton("none");
         displayGeneralButton("none");
 
-        updateChartjs(update, "bar", dataset, optionsStackedBar);
+        updateChartjs("bar", dataset, optionsStackedBar);
 
 
     }
@@ -463,7 +465,21 @@
         heatmapOptions.xaxis.categories = categories;
         heatmapOptions.chart.height = document.documentElement.clientHeight - 55;
         myApexChart.updateOptions(heatmapOptions);
+
     }
+
+    function clearChartjs() {
+        myChart.destroy();
+        myChart = new Chart(ctx, {
+            type: "bar",
+            data: {
+                labels: [],
+                datasets: []
+            },
+            options: optionsStackedBar
+        });
+    }
+
 
     function manageButtons(type) {
 
@@ -522,7 +538,7 @@
     }
 
     //Funcion que muestra u oculta la leyenda del gráfico
-    function hideLegend() {
+    function hideLegendChartjs() {
         if (legendActive == true) {
             legendActive = false;
             myChart.options.legend.display = false;
