Change the initial name of file when exports.

--- a/resources/graphics/Charts.html
+++ b/resources/graphics/Charts.html
@@ -38,7 +38,7 @@
 <div id="chart-container" class="chart-container">
     <canvas id="myChart"></canvas>
 </div>
-<div id="apexchartsDiv" style="display: none;"></div>
+<div id="apexchartsDiv"></div>
 
 <div id="table_div" class="table_div"></div>
 
